# protobuf-swift

./: .gitignore  .travis.yml  CREDITS  ISSUE_TEMPLATE  Makefile.am  Package.swift  ProtocolBuffers-Swift.podspec  ProtocolBuffersSwift.podspec  README.md  autogen.sh  build.sh  configure.ac  protobuf-swift.rb
ProtocolBuffers.xcodeproj/: ProtocolBuffers_Info.plist  project.pbxproj
ProtocolBuffers.xcodeproj/xcshareddata/xcschemes/: ProtocolBuffers-Package.xcscheme  ProtocolBuffers.xcscheme  xcschememanagement.plist
ProtocolBuffersTests/: SizeTest.swift
ProtocolBuffersTests/pbTests/: Baz.Foo.proto.swift  Google.Protobuf.NoGenericServicesTest.UnittestNoGenericServices.proto.swift  ProtobufUnittest.UnittestEmbedOptimizeFor.proto.swift  SwiftProtobufUnittest.UnittestMaps.proto.swift  UnittestDropUnknownFields.UnittestDropUnknownFields.proto.swift  UnittestStruct.proto.swift
Source/: AbstractMessage.swift  CodedInputStream.swift  CodedOutputStream.swift  ConcreateExtensionField.swift  ExtendableMessage.swift  ExtensionRegistry.swift  Field.swift  GeneratedMessage.swift  GeneratedMessageiGap.swift  Google.Protobuf.Any.proto.swift  Google.Protobuf.AnyType.proto.swift  Google.Protobuf.Api.proto.swift  Google.Protobuf.Compiler.Plugin.proto.swift  Google.Protobuf.Descriptor.proto.swift  Google.Protobuf.Duration.proto.swift  Google.Protobuf.Empty.proto.swift  Google.Protobuf.FieldMask.proto.swift  Google.Protobuf.SourceContext.proto.swift  Google.Protobuf.Struct.proto.swift  Google.Protobuf.SwiftDescriptor.proto.swift  Google.Protobuf.Timestamp.proto.swift  Google.Protobuf.Type.proto.swift  Google.Protobuf.Types.proto.swift  Google.Protobuf.Wrappers.proto.swift  Request.proto.swift  Response.proto.swift  RingBuffer.swift  UnknownFieldSet.swift  WireFormat.swift
plugin/PBCompiler/PBCompiler.xcodeproj/: project.pbxproj
plugin/ProtocolBuffers/ProtocolBuffers/: Info.plist
plugin/ProtocolBuffers/ProtocolBuffers.xcodeproj/: project.pbxproj
plugin/ProtocolBuffers/ProtocolBuffersTests/: CodedInputStreamTests.swift  CodedOuputStreamTests.swift  (+11 more)
plugin/Tests/: CodedOuputStreamTests.swift  MessageTests.swift  Performance.proto.swift  PluginTest.swift  TestUtilities.swift  UnknowFieldsTests.swift  WireFormatTests.swift
plugin/compiler/: Makefile.am  RESERVEDWORDS  RESERVEDWORDS.md  main.cc  swift_enum.cc  swift_enum.h  swift_enum_field.cc  swift_enum_field.h  swift_extension.cc  swift_field.cc  swift_field.h  swift_file.cc  swift_file.h  swift_generator.cc  swift_generator.h  swift_helpers.cc  swift_helpers.h  swift_map_field.cc  swift_map_field.h  swift_message.cc  swift_message.h  swift_message_field.cc  swift_message_field.h  swift_method.cc  swift_method.h  swift_oneof.cc  swift_oneof.h  swift_primitive_field.cc  swift_primitive_field.h  swift_service.cc  swift_service.h
plugin/compiler/google/protobuf/: any.proto  api.proto  descriptor.pb.cc  descriptor.pb.h  duration.proto  empty.proto  field_mask.proto  performance.proto  plugin.proto  source_context.proto  struct.proto  swift-descriptor.pb.cc  swift-descriptor.pb.h  swift-descriptor.proto  timestamp.proto  type.proto  unittest.proto  unittest_error_type.proto  unittest_maps.proto  unittest_struct.proto  wrappers.proto
plugin/compiler/google/protobuf/Utilities/: api.proto
plugin/compiler/react_native/: swift_file.cc  swift_file.h  swift_generator.cc  swift_helpers_react.cc  swift_helpers_react.h  swift_react.cc  swift_react.h  swift_react_enums.cc  swift_react_enums.h
plugin/compiler/realm/: swift_enum_realm.cc  swift_enum_realm.h  swift_file.cc  swift_generator.cc  swift_helpers_realm.cc  swift_helpers_realm.h  swift_message_realm.cc  swift_message_realm.h  swift_realm.cc  swift_realm.h
plugin/compiler/tests/baz/: foo.proto
scripts/: build.sh  makeDescriptor.sh  makeTests.sh
src/: makeDescriptor.sh
src/compiler/: Makefile.am  main.cc  makeTests.sh  protoc-gen-swift  swift_enum.cc  swift_enum_field.cc  swift_enum_field.h  swift_extension.cc  swift_extension.h  swift_field.cc  swift_field.h  swift_file.cc  swift_file.h  swift_generator.cc  swift_generator.h  swift_helpers.cc  swift_helpers.h  swift_map_field.cc  swift_map_field.h  swift_message.cc  swift_message.h  swift_message_field.cc  swift_message_field.h  swift_oneof.cc  swift_oneof.h  swift_oneof_field.cc  swift_oneof_field.h  swift_primitive_field.cc  swift_primitive_field.h
src/runtime-pb-swift/: AbstractMessage.swift  CodedInputStream.swift  CodedOutputStream.swift  ConcreteExtensionField.swift  ExtendableMessage.swift  ExtendableMessageBuilder.swift  ExtensionField.swift  ExtensionRegistry.swift  Field.swift  GeneratedMessage.swift  RingBuffer.swift  UnknownFieldSet.swift  UnknownFieldSetBuilder.swift  WireFormat.swift
travis/: travis.sh
(+292 files in other folders)
